<resources>
    <string name="app_name">cpgram</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_grievance">My Grievance</string>
    <string name="title_profile">Profile</string>
    <string name="email_username">Email/Username</string>
    <string name="password">Password</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pawan</string>
    <string name="nav_header_subtitle">pawan@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="username_error">Username is required</string>
    <string name="fullname_error">Full Name is required</string>
    <string name="mobile_error">Mobile No is required</string>
    <string name="mobile_validation_error">Enter Valid Mobile No</string>
    <string name="otp_sent">OTP Sent Successfully</string>
    <string name="otp_error">OTP Required</string>
    <string name="otp_validation_error">Enter valid OTP</string>
    <string name="password_error">Password is required</string>
    <string name="login">Log in</string>
    <string name="mobile_header">Enter your mobile number to proceed</string>
    <string name="citizen">Citizen</string>
    <string name="Officer">Officer</string>
    <string name="submit">Submit</string>
    <string name="continue_">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="select_manually">Select Manually</string>
    <string name="required">Required</string>
    <string name="select_with_list">Select From List</string>
</resources>