<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.RaiseActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main"
            android:layout_marginTop="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/spinner_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="#000000"
                android:textSize="14sp"
                />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtDescription"
            android:layout_below="@id/main"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="Enter Grievance/Press Mic and Speak to \n write Grievance in Selected language"
            android:textColorHint="#A7A7A7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textMultiLine"
                android:textColor="#5B5B5B"
                android:textSize="15sp"
                android:textStyle="bold"
                android:maxLines="7"
                android:lines="7"
                android:scrollHorizontally="false"
                android:gravity="top|start" />
        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/ivMic"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:layout_marginTop="200dp"
            android:layout_width="24dp"
            android:src="@drawable/baseline_mic_24"
            android:layout_height="24dp">

        </ImageView>
<RelativeLayout
    android:layout_margin="10dp"
    android:layout_below="@id/txtDescription"
    android:id="@+id/action"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="@color/black"
        android:layout_alignParentStart="true"
        android:id="@+id/tvSelectList"
        android:text="@string/select_with_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
    <TextView
        android:textColor="@color/black"
        android:layout_alignParentRight="true"
        android:id="@+id/tvSelectManually"
        android:text="@string/select_manually"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

</RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlMain"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:scrollbars="none"
            >
        </androidx.recyclerview.widget.RecyclerView>

        <RelativeLayout
            android:id="@+id/rlMannually"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_centerHorizontal="true"
                android:id="@+id/lvDepartment"
                android:layout_marginTop="20dp"
                android:background="@drawable/spinner_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/spDepartment"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_below="@id/lvDepartment"
                android:visibility="gone"
                android:id="@+id/lvCategory"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/spinner_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/spCategory"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:id="@+id/lvSubCategory"
                android:layout_below="@id/lvCategory"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/spinner_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/spSubCategory"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:backgroundTint="@null"
            android:id="@+id/btnContinue"
            android:visibility="visible"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/rlMain"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:text="@string/continue_"
            android:layout_marginLeft="10dp"
            android:background="@drawable/gradient_button"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtUsername"
            android:visibility="gone"
            android:layout_below="@id/rlMain"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="Full Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#A7A7A7"
            app:boxStrokeColor="#EAEAEE">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputUsername"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="#5B5B5B"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtMobileNo"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@id/txtUsername"
            android:hint="Mobile Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#A7A7A7"
            app:boxStrokeColor="#EAEAEE">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputMobileNo"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="#5B5B5B"
                android:textSize="14sp"
                android:inputType="number"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/lvDynamic"
        android:layout_below="@+id/txtMobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>


        <LinearLayout
            android:id="@+id/lvButton"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:layout_below="@+id/lvDynamic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:backgroundTint="@null"
                android:id="@+id/cancel"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/cancel"
                android:background="@drawable/gradient_button_red"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:backgroundTint="@null"
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_marginLeft="10dp"
                android:background="@drawable/gradient_button"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>




    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>